--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<html>
+
+<head>
+<title>thegoodlogan</title>
+</head>
+
+<body>
+		thegoodlogan
+		<br>
+		<img class = 'photo' id = 'image1' src = "images/lotus.jpg" style = "width:800px;"/>
+</body>
+</html>
